# Atomic

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE  README.md  Readme.md  docgen.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/unfinished-workflows/: documentation.yml
.github/workflows/: check.yml  clang-format.yml  clang-tidy-issues.yml  clang-tidy.yml  coverage.yml  cppcheck-test.yml  cppcheck.yml  documentation.yml  linux.yml  macintosh.yml  release.yml  security.yml  windows.yml
cmake/: BuildTypeOptions.cmake  CompilerWarnings.cmake  Properties.cmake  StaticAnalyzers.cmake
docs/references/: atomic.hpp.html  circle.hpp.html  compiler.hpp.html  constants.hpp.html  container.hpp.html  core.hpp.html  defines.hpp.html  dynamic_matrix_engine.hpp.html  dynamic_stack.hpp.html  dynamic_vector_engine.hpp.html  engine_properties.hpp.html  fixed_matrix_engine.hpp.html  fixed_stack.hpp.html  fixed_stack_operator.hpp.html  fixed_vector_engine.hpp.html  forwarder.hpp.html  geometry.hpp.html  index.html  line.hpp.html  line_segment.hpp.html  linear-algebra.hpp.html  logging.hpp.html  math.hpp.html  matrix.hpp.html  matrix_engine_operator.hpp.html  matrix_order.hpp.html  operating_system.hpp.html  physics.hpp.html  quarternion.hpp.html  random.hpp.html  ray.hpp.html  sequence.hpp.html  standard.hpp.html  timer.hpp.html  traits.hpp.html  triangle.hpp.html  utility.hpp.html  vector.hpp.html  vector_engine_operator.hpp.html
docs/sources/: atomic.hpp.html  circle.hpp.html  compiler.hpp.html  constants.hpp.html  container.hpp.html  core.hpp.html  defines.hpp.html  dynamic_matrix_engine.hpp.html  dynamic_stack.hpp.html  dynamic_vector_engine.hpp.html  engine_properties.hpp.html  fixed_matrix_engine.hpp.html  fixed_stack.hpp.html  fixed_stack_operator.hpp.html  fixed_vector_engine.hpp.html  forwarder.hpp.html  geometry.hpp.html  index.html  line.hpp.html  line_segment.hpp.html  linear-algebra.hpp.html  logging.hpp.html  math.hpp.html  matrix.hpp.html  matrix_engine_operator.hpp.html  matrix_order.hpp.html  operating_system.hpp.html  physics.hpp.html  quarternion.hpp.html  random.hpp.html  ray.hpp.html  sequence.hpp.html  standard.hpp.html  timer.hpp.html  traits.hpp.html  triangle.hpp.html  utility.hpp.html  vector.hpp.html  vector_engine_operator.hpp.html
example/: CMakeLists.txt
example/atomic/container/: fixed_stack_la.example.cpp
example/atomic/core/: logging.example.cpp
example/atomic/linear-algebra/: matrix_engine_arithmetic.example.cpp  vector.example.cpp  vector_engine_arithmetic.example.cpp  vector_print.example.cpp
example/container/: fixed_stack_la.example.cpp
example/core/: logging.example.cpp
example/linear-algebra/: matrix_engine_arithmetic.example.cpp  vector.example.cpp  vector_engine_arithmetic.example.cpp  vector_print.example.cpp
include/: atomic.hpp
include/atomic/: container.hpp  core.hpp  geometry.hpp  linear-algebra.hpp  math.hpp  physics.hpp
include/atomic/container/: dynamic_stack.hpp  fixed_stack.hpp  fixed_stack_operator.hpp
include/atomic/core/: compiler.hpp  defines.hpp  logging.hpp  operating_system.hpp  standard.hpp  utility.hpp
include/atomic/geometry/: circle.hpp  forwarder.hpp  line.hpp  line_segment.hpp  ray.hpp  triangle.hpp
include/atomic/linear-algebra/: dynamic_matrix_engine.hpp  dynamic_vector_engine.hpp  engine_properties.hpp  fixed_matrix_engine.hpp  fixed_vector_engine.hpp  forwarder.hpp  math.hpp  matrix.hpp  matrix_engine_operator.hpp  matrix_order.hpp  quarternion.hpp  quarternion_operator.hpp  traits.hpp  vector.hpp  vector_engine_operator.hpp
include/atomic/math/: constants.hpp  random.hpp  sequence.hpp  timer.hpp
include/atomic/physics/: constants.hpp
tests/: CMakeLists.txt  main.cpp  test.cpp  test_helper.hpp
tests-old/: CMakeLists.txt  test.cpp  test_helper.hpp
tests-old/linear-algebra/: test_matrix.hpp  test_traits.hpp  test_vector.hpp
tests/linear-algebra/: is_scalar_element.cpp  test_matrix.hpp  test_traits.hpp  test_vector.hpp
tests/linear-algebra/vector/: fixed_vector_addition.cpp  fixed_vector_subtraction.cpp
tests/performance/: CMakeLists.txt  main.cpp
tests/unit/: CMakeLists.txt  unit_main.cpp
tests/unit/linear-algebra/: dynamic_vector_addition.test.cpp  dynamic_vector_multiplication.test.cpp  fixed_vector_addition.test.cpp  fixed_vector_multiplication.test.cpp  is_engine.test.cpp  test_matrix.cpp  test_vector
tests/unit/linear-algebra/quarternion/: quarternion_addition.test.cpp
tests/unit/linear-algebra/traits/: element_promotion.test.cpp  is_engine.test.cpp  is_scalar_element.test.cpp
tests/unit/linear-algebra/vector/: dynamic_vector_addition.test.cpp  dynamic_vector_multiplication.test.cpp  dynamic_vector_subtraction.test.cpp  fixed_vector_addition.test.cpp  fixed_vector_math.test.cpp  fixed_vector_multiplication.test.cpp  fixed_vector_subtraction.test.cpp
tools/: build_documentation.ps1  build_documentation.sh  check_file_names.py  check_header_guards.py  check_licenses.py
